Archive2/58/5e890f6dab8824/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:17:1: error: static assertion failed: Sanity check
 static_assert(has_common_type<int>::value, "Sanity check");
 ^
main.cpp:18:1: error: static assertion failed: Sanity check
 static_assert(has_common_type<int, int>::value, "Sanity check");
 ^
main.cpp:19:1: error: static assertion failed: Sanity check
 static_assert(has_common_type<int, double>::value, "Sanity check");
 ^
main.cpp:20:1: error: static assertion failed: Sanity check
 static_assert(has_common_type<char, int, float, double>::value, "Sanity check");
 ^
